--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);
 
 /*!
  * Bootstrap v4.6.1 (https://getbootstrap.com/)
@@ -38,6 +38,7 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+
 *,
 *::before,
 *::after {
@@ -45,10 +46,12 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: "Nunito", sans-serif!important;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 article,
@@ -72,7 +75,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #ffffff;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -414,7 +417,8 @@ h5,
 
 h6,
 .h6 {
-  font-size: 0.9rem;
+  font-size: 19px!important;
+  color: #6b778c!important;
 }
 
 .lead {
