--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 /*!
  * Bootstrap v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -382,7 +383,8 @@ h5, .h5 {
 }
 
 h6, .h6 {
-  font-size: 0.9rem;
+  font-size: 17px!important;
+  color: #6b778c;
 }
 
 .lead {
@@ -4362,7 +4364,7 @@ input[type=button].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 0px solid rgba(0, 0, 0, 0.125)!important;
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -10176,7 +10178,7 @@ sup {
 
 a {
   color: #3490dc;
-  text-decoration: none;
+  text-decoration: none!important;
   background-color: transparent;
 }
 a:hover {
