--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
+/* @import url(https://fonts.googleapis.com/css?family=Nunito); */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+@import url('http://fonts.cdnfonts.com/css/sen');
 /*!
  * Bootstrap v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -33,7 +34,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Nunito", sans-serif;
+  --font-family-sans-serif: "Axiforma", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -44,7 +45,7 @@
 }
 
 html {
-  font-family: "Nunito", sans-serif!important;
+  font-family: "Axiforma", sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -58,7 +59,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Axiforma", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -80,6 +81,7 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  font-family: "Axiforma", sans-serif!important;
 }
 
 p {
@@ -10181,6 +10183,8 @@ a {
   color: #3490dc;
   text-decoration: none!important;
   background-color: transparent;
+  font-family: 'Sen', sans-serif!important;
+  /* font-family: "Axiforma", sans-serif!important; */
 }
 a:hover {
   color: #1d68a7;
@@ -10388,7 +10392,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 1.8rem;
+  font-size: 18px !important;
+  color: #333!important;
 }
 
 h3, .h3 {
