--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -138,7 +138,7 @@
 
 @media only screen and (min-width: 768px){
     .menu-left {
-        margin-left: 45px;
+        margin-left: 35px;
     }
 }
 
@@ -157,9 +157,10 @@ p {
     font-size: 24px!important;
 }
 
-/* body {
-    font-family: "Nunito", sans-serif!important;
-} */
+body {
+    background-color: #fff!important;
+    /* font-family: "Nunito", sans-serif!important; */
+}
 
 .banner-text {
     font-family: 'Sen', sans-serif!important;
@@ -176,6 +177,7 @@ p {
     border-radius: 10px!important;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px!important;
     font-family: "Axiforma", sans-serif!important;
+    padding: 7px 20px!important;
 }
 
 .banner-section {
@@ -222,7 +224,7 @@ h6 {
 
 .about-section {
     background-color: #F4FAFF;
-    padding: 90px 50px!important;
+    padding: 90px 90px!important;
 }
 
 .sub-text {
@@ -234,7 +236,7 @@ h6 {
 }
 
 .about-heading {
-    font-size: 50px;
+    font-size: 48px;
     color: #303030;
     line-height: 65px;
 }
@@ -250,7 +252,7 @@ h6 {
 
 .producttab-section {
     background-color: #fff;
-    padding: 80px 0px 160px 0px;
+    padding: 80px 0px 80px 0px;
 }
 
 .footer-section {
@@ -365,6 +367,12 @@ div.img img {
     font-weight: 600!important;
     font-size: 24px!important;
     margin-bottom: 14px!important;
+}
+
+.card-title-blog {
+    color: #333;
+    font-weight: 600!important;
+    font-size: 15px!important;
 }
 
 .card-body {
@@ -636,9 +644,25 @@ a.icon-faq {
     }
 }
 
+@media only screen and (max-width: 768px){
+    .about-heading {
+        font-size: 44px;
+        color: #303030;
+        line-height: 65px;
+    }
+}
+
+
 .tab-section {
     margin-top: 50px!important;
 }
+
+/* @media only screen and (min-width: 768px){
+    .container {
+        max-width: 1200px!important;
+    }
+} */
+
 
 @media only screen and (min-width: 768px){
     .dropdown-large {
@@ -677,3 +701,51 @@ a.icon-faq {
         pointer-events: none;
     } 
 }
+
+.tab {
+    float: left;
+    width: 100%;
+    height: 520px;
+}
+  
+
+.tab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 0px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+    margin-bottom: 8px;
+}
+  
+
+  
+.tab button.active {
+    background-color: #fff;
+    box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
+    color: #1B76BA!important;
+    border-radius: 14px;
+}
+  
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    width: 100%;
+    border-left: none;
+    height: 300px;
+}
+
+.br-30 {
+    border-radius: 30px;
+}
+
+
+img {
+    image-rendering: auto;
+  }
