--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -168,7 +168,7 @@ body {
 
 .banner-text {
     font-family: 'Sen', sans-serif!important;
-    font-size: 18px!important;
+    font-size: 17px!important;
     color: #333!important;
     font-weight: 400!important;
 }
@@ -270,12 +270,32 @@ h6 {
     padding: 50px 0px;
 }
 
-.newsletter-section {
-    background-color: #0a94a8;
-    padding: 120px 0px;
-    background-image: linear-gradient(
-83deg, #0898a5, #2d4f8e);
-    border-radius: 30px;
+@media only screen and (min-width: 768px){
+    .newsletter-section {
+        /* background-color: #0a94a8; */
+        padding: 120px 0px;
+        background-image: url('/img/footer-rectangle.png');
+        /* background-image: linear-gradient(
+    83deg, #0898a5, #2d4f8e); */
+        border-radius: 30px;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover; /* Resize the background image to cover the entire container */
+    }
+}
+
+
+
+
+@media only screen and (max-width: 768px){
+    .newsletter-section {
+        background-color: #0a94a8;
+        padding: 120px 0px;
+        /* background-image: url('/img/footer-rectangle.png'); */
+        background-image: linear-gradient(
+    83deg, #0898a5, #2d4f8e);
+        border-radius: 30px;
+    }
 }
 
 .newsletter-text {
@@ -346,7 +366,7 @@ div.img img {
 
 .testimonial-text {
     color: #000;
-    font-size: 15px!important;
+    font-size: 14px!important;
     margin: 28px 0px;
     line-height: 23px;
     padding: 0px 40px 0px 0px;
@@ -474,19 +494,19 @@ footer {
 }
 
 .values {
-    padding: 65px 40px;
+    padding: 65px 20px;
     background-color: rgba(0, 166, 156, 0.1);
     border-radius: 30px;
 }
 
 .values-two {
-    padding: 65px 40px;
+    padding: 65px 20px;
     background-color:#1B76BA1A;
     border-radius: 30px;
 }
 
 .values-three {
-    padding: 65px 40px;
+    padding: 65px 20px;
     background-color: rgba(51, 51, 51, 0.1);;
     border-radius: 30px;
 }
@@ -783,6 +803,12 @@ a.icon-faq {
 }
 
 
+@media only screen and (min-width: 768px){
+    .about-subtitle {
+        padding: 0px 239px!important;
+    }
+}
+
 
 
 @media only screen and (min-width: 768px){
@@ -807,4 +833,12 @@ a.icon-faq {
         line-height: 65px;
         font-weight: 800!important;
     }
+}
+
+.award-logo {
+    max-width: 65%!important;
+}
+
+hr {
+    margin: 0rem 0!important;
 }
