--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
 /* @import url(https://fonts.googleapis.com/css?family=Nunito); */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
-@import url('http://fonts.cdnfonts.com/css/sen');
+@import url('https://fonts.cdnfonts.com/css/sen');
 /*!
  * Bootstrap v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
