--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -174,10 +174,10 @@ body {
 }
 
 .banner-heading {
-    font-size: 50px;
+    font-size: 49px;
     color: #303030;
     line-height: 65px;
-    font-weight: 800!important;
+    font-weight: 900!important;
 }
 
 .get-started-btn {
@@ -253,7 +253,7 @@ h6 {
 }
 
 .text-about {
-    padding: 70px 30px!important;
+    padding: 70px 18px!important;
 }
 
 .product-section {
@@ -351,14 +351,14 @@ div.img img {
 }
 
 .testimonial-one {
-    padding: 50px 30px;
+    padding: 75px 30px;
     background: rgba(0, 166, 156, 0.1);
     border-radius: 30px;
     margin-top: 50px;
 }
 
 .testimonial-two {
-    padding: 50px 30px;
+    padding: 75px 30px;
     background: rgba(27, 118, 186, 0.1);
     border-radius: 30px;
     margin-top: 50px;
@@ -409,8 +409,9 @@ div.img img {
 .card-body {
     flex: 1 1 auto!important;
     padding: 16px 16px 43px 16px!important;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px!important;
+    box-shadow: 0px 4px 10px rgba(110, 112, 113, 0.1)!important;
     border-radius: 0px 0px 30px 30px;
+    border: 1px solid #f7f7f7;
 }
 footer {
     padding-top: 90px;
@@ -440,7 +441,7 @@ footer {
     border: 1px solid #f2f2f2!important;
     box-shadow: rgb(0 0 0 / 3%) 0px -16px 9px;
     border-radius: 20px!important;
-    padding: 30px!important;
+    padding: 44px!important;
 }
 
 .menu-logo {
@@ -458,7 +459,7 @@ footer {
 }
 
 .logo-menu {
-    padding-left: 10px;
+    padding-left: 30px;
 }
 
 .carousel-indicators {
@@ -785,7 +786,7 @@ a.icon-faq {
   
 .tab button.active {
     background-color: #fff;
-    box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
+    box-shadow: 0px 4px 10px rgba(110, 112, 113, 0.1);
     color: #1B76BA!important;
     border-radius: 14px;
 }
@@ -828,10 +829,10 @@ a.icon-faq {
 
 @media only screen and (max-width: 768px){
     .banner-heading {
-        font-size: 46px;
+        font-size: 45px;
         color: #303030;
         line-height: 65px;
-        font-weight: 800!important;
+        font-weight: 900!important;
     }
 }
 
@@ -841,4 +842,64 @@ a.icon-faq {
 
 hr {
     margin: 0rem 0!important;
+}
+
+@media only screen and (min-width: 768px){
+    .right-float {
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 768px){
+    .footer-form {
+        padding-left: 100px;
+    }
+}
+
+
+@media only screen and (min-width: 768px){
+    .mobile {
+        display: none!important;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .desktop {
+        display: none!important;
+    }
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url(/img/nav-icon.png)!important;
+}
+
+.navbar-light .navbar-toggler {
+    border: 0!important;
+}
+
+@media only screen and (max-width: 768px){
+    .mobile-center {
+        text-align: center;
+    }
+}
+
+.sucess-heading {
+    font-size: 30px;
+    color: #00A69C;
+    font-weight: 600;
+}
+
+.controller {
+    float: right;
+    margin-right: 13px;
+    margin-top: -105px;
+}
+
+.control {
+    float: right;
+}
+
+.control-mobile {
+    text-align: center;
+    margin-top: 20px;
 }
