--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,7 +65,8 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
